[package]
name = "websocket_jsonpatch"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.4", features = ["ws"]}
tokio = { version = "1", features = ["full"] }

tracing = "0.1.26"
tracing-subscriber = "0.2.19"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
json-patch = "0.2.6"
